--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nuxt": "^3.11.2",
     "nuxt-og-image": "^2.2.4",
     "nuxt-svgo": "^3.7.0",
+    "prettier": "^3.3.3",
     "resend": "^0.17.2",
     "sitemap": "^7.1.1"
   },
